2016-11-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (sformats[]): Add fractional seconds to four more
	datetimes; (isLengthEightAndAllDigits): Another refinement;
	(setDebug): add simple debug routine

2016-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (convertToTime): Add logic to cope with the extended
	'yyyymmdd hhmm[ss[.fff]]' format which needs treatment before parsing
	* tests/allFormats.R: Added tests

2016-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (testOutput): New simple (unexported) string output function
	* src/anytime.cpp (testOutput_impl): Implementation

2016-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Rolled version and date

	* R/anytime.R (testFormat): New layer around testFormat_impl testing for RStudio
	* src/anytime.cpp (testFormat_impl): Renamed from testFormat
	* R/utils.R (isRStudio): New helper function
	* R/init.R (.onLoad): At startup, check if we are inside RStudio

2016-10-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (sformats[]): New format for RFC 822 style date
	* tests/allFormats.R: New test

	* tests/validate.R: Added test for utcparse via stopifnot()

2016-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Adding utctime() and utcdate() to export()

	* R/anytime.R: Expanded documentation in Notes section (also
	merging the Issues section in); expand documentation of the tz
	argument; expanded examples
	* man/anytime.Rd: Ditto

	* R/utils.R (setTZ): New (unexported) helper function

2016-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (anytime_cpp): New option asUTC (defaulting to
	false) which governs whether parsing is as localtime or UTC
	(ptToDoubleUTC): New UTC conversion of ptime to double
	(stringToTime): Dispatch to either ptToDouble or ptToDoubleUTC

	* R/anytime.R (anytime): Document new option asUTC;
	add and document new callers utctime() and utcdate()
	* man/anytime.Rd: Document new options and functions
